cmake_minimum_required(VERSION 3.22)
project(algorithm-template-cpp)

set(CMAKE_CXX_STANDARD 14)


add_executable(dijkstra dijkstra.cpp)
add_executable(heapsort heapsort.cpp)
add_executable(mergesort mergesort.cpp)
add_executable(trie trie.cpp)
add_executable(quicksort quicksort.cpp)
add_executable(bucketsort bucketsort.cpp)
add_executable(bubblesort bubblesort.cpp)
add_executable(insertsort insertsort.cpp)
add_executable(shellsort shellsort.cpp)
add_executable(countingsort countingsort.cpp)

add_executable(radixsort radixsort.cpp)
add_executable(selectionsort selectionsort.cpp)
add_executable(bellmanford bellmanford.cpp)
add_executable(floydwarshall floydwarshall.cpp)
add_executable(spfa spfa.cpp)
add_executable(topologicalsort topologicalsort.cpp)
add_executable(kruskal kruskal.cpp)
add_executable(prim prim.cpp)
add_executable(kmp kmp.cpp)
add_executable(topk topk.cpp)